y.output
   0  $accept : Goal $end

   1  Goal : MainClass ClassDeclaretionRepetition
   2       | MainClass

   3  MainClass : CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' IDENTIFIER ')' '{' Statement '}' '}'

   4  ClassDeclaretionRepetition : ClassDeclaretionRepetition ClassDeclaretion

   5  ClassDeclaretion : CLASS IDENTIFIER EXTENDS IDENTIFIER '{' VarDeclaretionRepetition MethodDeclarationRepetition '}'
   6                   | CLASS IDENTIFIER '{' VarDeclaretionRepetition MethodDeclarationRepetition '}'
   7                   | CLASS IDENTIFIER EXTENDS IDENTIFIER '{' MethodDeclarationRepetition '}'
   8                   | CLASS IDENTIFIER '{' MethodDeclarationRepetition '}'
   9                   | CLASS IDENTIFIER EXTENDS IDENTIFIER '{' VarDeclaretionRepetition '}'
  10                   | CLASS IDENTIFIER '{' VarDeclaretionRepetition '}'
  11                   | CLASS IDENTIFIER EXTENDS IDENTIFIER '{' '}'
  12                   | CLASS IDENTIFIER '{' '}'

  13  VarDeclaretionRepetition : VarDeclaretionRepetition VarDeclaretion
  14                           | VarDeclaretion

  15  MethodDeclarationRepetition : MethodDeclarationRepetition MethodDeclaration
  16                              | MethodDeclaration

  17  VarDeclaretion : Type IDENTIFIER ';'

  18  MethodDeclaration : PUBLIC Type IDENTIFIER '(' DeclarationTypesRepetition ')' '{' VarDeclaretionRepetition StatementRepetition RETURN Expression ';' '}'
  19                    | PUBLIC Type IDENTIFIER '(' DeclarationTypesRepetition ')' '{' VarDeclaretionRepetition RETURN Expression ';' '}'
  20                    | PUBLIC Type IDENTIFIER '(' ')' '{' VarDeclaretionRepetition StatementRepetition RETURN Expression ';' '}'
  21                    | PUBLIC Type IDENTIFIER '(' ')' '{' VarDeclaretionRepetition RETURN Expression ';' '}'
  22                    | PUBLIC Type IDENTIFIER '(' DeclarationTypesRepetition ')' '{' StatementRepetition RETURN Expression ';' '}'
  23                    | PUBLIC Type IDENTIFIER '(' DeclarationTypesRepetition ')' '{' RETURN Expression ';' '}'
  24                    | PUBLIC Type IDENTIFIER '(' ')' '{' StatementRepetition RETURN Expression ';' '}'
  25                    | PUBLIC Type IDENTIFIER '(' ')' '{' RETURN Expression ';' '}'

  26  DeclarationTypesRepetition : Type IDENTIFIER ',' DeclarationTypesRepetition
  27                             | Type IDENTIFIER

  28  StatementRepetition : StatementRepetition Statement
  29                      | Statement

  30  Type : INT '[' ']'
  31       | BOOLEAN
  32       | INT
  33       | IDENTIFIER

  34  Statement : '{' StatementRepetition '}'
  35            | '{' '}'
  36            | IF '(' Expression ')' Statement ELSE Statement
  37            | WHILE '(' Expression ')' Statement
  38            | PRINT '(' Expression ')' ';'
  39            | IDENTIFIER '=' Expression ';'
  40            | IDENTIFIER '[' Expression ']' '=' Expression ';'

  41  Expression : Expression Operator Expression
  42             | Expression '[' Expression ']'
  43             | Expression '.' LENGTH
  44             | Expression '.' IDENTIFIER '(' ')'
  45             | Expression '.' IDENTIFIER '(' ExpressionRepetition ')'
  46             | INTEGERLITERAL
  47             | TRUE
  48             | FALSE
  49             | IDENTIFIER
  50             | THIS
  51             | NEW INT '[' Expression ']'
  52             | NEW IDENTIFIER '(' ')'
  53             | '!' Expression
  54             | '(' Expression ')'

  55  ExpressionRepetition : ExpressionRepetition ',' Expression
  56                       | Expression

  57  Operator : "&&"
  58           | '<'
  59           | '+'
  60           | '-'
  61           | '*'

state 0
	$accept : . Goal $end  (0)

	CLASS  shift 1
	.  error

	Goal  goto 2
	MainClass  goto 3


state 1
	MainClass : CLASS . IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' IDENTIFIER ')' '{' Statement '}' '}'  (3)

	IDENTIFIER  shift 4
	.  error


state 2
	$accept : Goal . $end  (0)

	$end  accept


state 3
	Goal : MainClass . ClassDeclaretionRepetition  (1)
	Goal : MainClass .  (2)

	.  reduce 2

	ClassDeclaretionRepetition  goto 5


state 4
	MainClass : CLASS IDENTIFIER . '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' IDENTIFIER ')' '{' Statement '}' '}'  (3)

	'{'  shift 6
	.  error


state 5
	Goal : MainClass ClassDeclaretionRepetition .  (1)
	ClassDeclaretionRepetition : ClassDeclaretionRepetition . ClassDeclaretion  (4)

	CLASS  shift 7
	$end  reduce 1

	ClassDeclaretion  goto 8


state 6
	MainClass : CLASS IDENTIFIER '{' . PUBLIC STATIC VOID MAIN '(' STRING '[' ']' IDENTIFIER ')' '{' Statement '}' '}'  (3)

	PUBLIC  shift 9
	.  error


state 7
	ClassDeclaretion : CLASS . IDENTIFIER EXTENDS IDENTIFIER '{' VarDeclaretionRepetition MethodDeclarationRepetition '}'  (5)
	ClassDeclaretion : CLASS . IDENTIFIER '{' VarDeclaretionRepetition MethodDeclarationRepetition '}'  (6)
	ClassDeclaretion : CLASS . IDENTIFIER EXTENDS IDENTIFIER '{' MethodDeclarationRepetition '}'  (7)
	ClassDeclaretion : CLASS . IDENTIFIER '{' MethodDeclarationRepetition '}'  (8)
	ClassDeclaretion : CLASS . IDENTIFIER EXTENDS IDENTIFIER '{' VarDeclaretionRepetition '}'  (9)
	ClassDeclaretion : CLASS . IDENTIFIER '{' VarDeclaretionRepetition '}'  (10)
	ClassDeclaretion : CLASS . IDENTIFIER EXTENDS IDENTIFIER '{' '}'  (11)
	ClassDeclaretion : CLASS . IDENTIFIER '{' '}'  (12)

	IDENTIFIER  shift 10
	.  error


state 8
	ClassDeclaretionRepetition : ClassDeclaretionRepetition ClassDeclaretion .  (4)

	.  reduce 4


state 9
	MainClass : CLASS IDENTIFIER '{' PUBLIC . STATIC VOID MAIN '(' STRING '[' ']' IDENTIFIER ')' '{' Statement '}' '}'  (3)

	STATIC  shift 11
	.  error


state 10
	ClassDeclaretion : CLASS IDENTIFIER . EXTENDS IDENTIFIER '{' VarDeclaretionRepetition MethodDeclarationRepetition '}'  (5)
	ClassDeclaretion : CLASS IDENTIFIER . '{' VarDeclaretionRepetition MethodDeclarationRepetition '}'  (6)
	ClassDeclaretion : CLASS IDENTIFIER . EXTENDS IDENTIFIER '{' MethodDeclarationRepetition '}'  (7)
	ClassDeclaretion : CLASS IDENTIFIER . '{' MethodDeclarationRepetition '}'  (8)
	ClassDeclaretion : CLASS IDENTIFIER . EXTENDS IDENTIFIER '{' VarDeclaretionRepetition '}'  (9)
	ClassDeclaretion : CLASS IDENTIFIER . '{' VarDeclaretionRepetition '}'  (10)
	ClassDeclaretion : CLASS IDENTIFIER . EXTENDS IDENTIFIER '{' '}'  (11)
	ClassDeclaretion : CLASS IDENTIFIER . '{' '}'  (12)

	EXTENDS  shift 12
	'{'  shift 13
	.  error


state 11
	MainClass : CLASS IDENTIFIER '{' PUBLIC STATIC . VOID MAIN '(' STRING '[' ']' IDENTIFIER ')' '{' Statement '}' '}'  (3)

	VOID  shift 14
	.  error


state 12
	ClassDeclaretion : CLASS IDENTIFIER EXTENDS . IDENTIFIER '{' VarDeclaretionRepetition MethodDeclarationRepetition '}'  (5)
	ClassDeclaretion : CLASS IDENTIFIER EXTENDS . IDENTIFIER '{' MethodDeclarationRepetition '}'  (7)
	ClassDeclaretion : CLASS IDENTIFIER EXTENDS . IDENTIFIER '{' VarDeclaretionRepetition '}'  (9)
	ClassDeclaretion : CLASS IDENTIFIER EXTENDS . IDENTIFIER '{' '}'  (11)

	IDENTIFIER  shift 15
	.  error


state 13
	ClassDeclaretion : CLASS IDENTIFIER '{' . VarDeclaretionRepetition MethodDeclarationRepetition '}'  (6)
	ClassDeclaretion : CLASS IDENTIFIER '{' . MethodDeclarationRepetition '}'  (8)
	ClassDeclaretion : CLASS IDENTIFIER '{' . VarDeclaretionRepetition '}'  (10)
	ClassDeclaretion : CLASS IDENTIFIER '{' . '}'  (12)

	PUBLIC  shift 16
	BOOLEAN  shift 17
	INT  shift 18
	IDENTIFIER  shift 19
	'}'  shift 20
	.  error

	VarDeclaretionRepetition  goto 21
	MethodDeclarationRepetition  goto 22
	VarDeclaretion  goto 23
	MethodDeclaration  goto 24
	Type  goto 25


state 14
	MainClass : CLASS IDENTIFIER '{' PUBLIC STATIC VOID . MAIN '(' STRING '[' ']' IDENTIFIER ')' '{' Statement '}' '}'  (3)

	MAIN  shift 26
	.  error


state 15
	ClassDeclaretion : CLASS IDENTIFIER EXTENDS IDENTIFIER . '{' VarDeclaretionRepetition MethodDeclarationRepetition '}'  (5)
	ClassDeclaretion : CLASS IDENTIFIER EXTENDS IDENTIFIER . '{' MethodDeclarationRepetition '}'  (7)
	ClassDeclaretion : CLASS IDENTIFIER EXTENDS IDENTIFIER . '{' VarDeclaretionRepetition '}'  (9)
	ClassDeclaretion : CLASS IDENTIFIER EXTENDS IDENTIFIER . '{' '}'  (11)

	'{'  shift 27
	.  error


state 16
	MethodDeclaration : PUBLIC . Type IDENTIFIER '(' DeclarationTypesRepetition ')' '{' VarDeclaretionRepetition StatementRepetition RETURN Expression ';' '}'  (18)
	MethodDeclaration : PUBLIC . Type IDENTIFIER '(' DeclarationTypesRepetition ')' '{' VarDeclaretionRepetition RETURN Expression ';' '}'  (19)
	MethodDeclaration : PUBLIC . Type IDENTIFIER '(' ')' '{' VarDeclaretionRepetition StatementRepetition RETURN Expression ';' '}'  (20)
	MethodDeclaration : PUBLIC . Type IDENTIFIER '(' ')' '{' VarDeclaretionRepetition RETURN Expression ';' '}'  (21)
	MethodDeclaration : PUBLIC . Type IDENTIFIER '(' DeclarationTypesRepetition ')' '{' StatementRepetition RETURN Expression ';' '}'  (22)
	MethodDeclaration : PUBLIC . Type IDENTIFIER '(' DeclarationTypesRepetition ')' '{' RETURN Expression ';' '}'  (23)
	MethodDeclaration : PUBLIC . Type IDENTIFIER '(' ')' '{' StatementRepetition RETURN Expression ';' '}'  (24)
	MethodDeclaration : PUBLIC . Type IDENTIFIER '(' ')' '{' RETURN Expression ';' '}'  (25)

	BOOLEAN  shift 17
	INT  shift 18
	IDENTIFIER  shift 19
	.  error

	Type  goto 28


state 17
	Type : BOOLEAN .  (31)

	.  reduce 31


state 18
	Type : INT . '[' ']'  (30)
	Type : INT .  (32)

	'['  shift 29
	IDENTIFIER  reduce 32


state 19
	Type : IDENTIFIER .  (33)

	.  reduce 33


state 20
	ClassDeclaretion : CLASS IDENTIFIER '{' '}' .  (12)

	.  reduce 12


state 21
	ClassDeclaretion : CLASS IDENTIFIER '{' VarDeclaretionRepetition . MethodDeclarationRepetition '}'  (6)
	ClassDeclaretion : CLASS IDENTIFIER '{' VarDeclaretionRepetition . '}'  (10)
	VarDeclaretionRepetition : VarDeclaretionRepetition . VarDeclaretion  (13)

	PUBLIC  shift 16
	BOOLEAN  shift 17
	INT  shift 18
	IDENTIFIER  shift 19
	'}'  shift 30
	.  error

	MethodDeclarationRepetition  goto 31
	VarDeclaretion  goto 32
	MethodDeclaration  goto 24
	Type  goto 25


state 22
	ClassDeclaretion : CLASS IDENTIFIER '{' MethodDeclarationRepetition . '}'  (8)
	MethodDeclarationRepetition : MethodDeclarationRepetition . MethodDeclaration  (15)

	PUBLIC  shift 16
	'}'  shift 33
	.  error

	MethodDeclaration  goto 34


state 23
	VarDeclaretionRepetition : VarDeclaretion .  (14)

	.  reduce 14


state 24
	MethodDeclarationRepetition : MethodDeclaration .  (16)

	.  reduce 16


state 25
	VarDeclaretion : Type . IDENTIFIER ';'  (17)

	IDENTIFIER  shift 35
	.  error


state 26
	MainClass : CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN . '(' STRING '[' ']' IDENTIFIER ')' '{' Statement '}' '}'  (3)

	'('  shift 36
	.  error


state 27
	ClassDeclaretion : CLASS IDENTIFIER EXTENDS IDENTIFIER '{' . VarDeclaretionRepetition MethodDeclarationRepetition '}'  (5)
	ClassDeclaretion : CLASS IDENTIFIER EXTENDS IDENTIFIER '{' . MethodDeclarationRepetition '}'  (7)
	ClassDeclaretion : CLASS IDENTIFIER EXTENDS IDENTIFIER '{' . VarDeclaretionRepetition '}'  (9)
	ClassDeclaretion : CLASS IDENTIFIER EXTENDS IDENTIFIER '{' . '}'  (11)

	PUBLIC  shift 16
	BOOLEAN  shift 17
	INT  shift 18
	IDENTIFIER  shift 19
	'}'  shift 37
	.  error

	VarDeclaretionRepetition  goto 38
	MethodDeclarationRepetition  goto 39
	VarDeclaretion  goto 23
	MethodDeclaration  goto 24
	Type  goto 25


state 28
	MethodDeclaration : PUBLIC Type . IDENTIFIER '(' DeclarationTypesRepetition ')' '{' VarDeclaretionRepetition StatementRepetition RETURN Expression ';' '}'  (18)
	MethodDeclaration : PUBLIC Type . IDENTIFIER '(' DeclarationTypesRepetition ')' '{' VarDeclaretionRepetition RETURN Expression ';' '}'  (19)
	MethodDeclaration : PUBLIC Type . IDENTIFIER '(' ')' '{' VarDeclaretionRepetition StatementRepetition RETURN Expression ';' '}'  (20)
	MethodDeclaration : PUBLIC Type . IDENTIFIER '(' ')' '{' VarDeclaretionRepetition RETURN Expression ';' '}'  (21)
	MethodDeclaration : PUBLIC Type . IDENTIFIER '(' DeclarationTypesRepetition ')' '{' StatementRepetition RETURN Expression ';' '}'  (22)
	MethodDeclaration : PUBLIC Type . IDENTIFIER '(' DeclarationTypesRepetition ')' '{' RETURN Expression ';' '}'  (23)
	MethodDeclaration : PUBLIC Type . IDENTIFIER '(' ')' '{' StatementRepetition RETURN Expression ';' '}'  (24)
	MethodDeclaration : PUBLIC Type . IDENTIFIER '(' ')' '{' RETURN Expression ';' '}'  (25)

	IDENTIFIER  shift 40
	.  error


state 29
	Type : INT '[' . ']'  (30)

	']'  shift 41
	.  error


state 30
	ClassDeclaretion : CLASS IDENTIFIER '{' VarDeclaretionRepetition '}' .  (10)

	.  reduce 10


state 31
	ClassDeclaretion : CLASS IDENTIFIER '{' VarDeclaretionRepetition MethodDeclarationRepetition . '}'  (6)
	MethodDeclarationRepetition : MethodDeclarationRepetition . MethodDeclaration  (15)

	PUBLIC  shift 16
	'}'  shift 42
	.  error

	MethodDeclaration  goto 34


state 32
	VarDeclaretionRepetition : VarDeclaretionRepetition VarDeclaretion .  (13)

	.  reduce 13


state 33
	ClassDeclaretion : CLASS IDENTIFIER '{' MethodDeclarationRepetition '}' .  (8)

	.  reduce 8


state 34
	MethodDeclarationRepetition : MethodDeclarationRepetition MethodDeclaration .  (15)

	.  reduce 15


state 35
	VarDeclaretion : Type IDENTIFIER . ';'  (17)

	';'  shift 43
	.  error


state 36
	MainClass : CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' . STRING '[' ']' IDENTIFIER ')' '{' Statement '}' '}'  (3)

	STRING  shift 44
	.  error


state 37
	ClassDeclaretion : CLASS IDENTIFIER EXTENDS IDENTIFIER '{' '}' .  (11)

	.  reduce 11


state 38
	ClassDeclaretion : CLASS IDENTIFIER EXTENDS IDENTIFIER '{' VarDeclaretionRepetition . MethodDeclarationRepetition '}'  (5)
	ClassDeclaretion : CLASS IDENTIFIER EXTENDS IDENTIFIER '{' VarDeclaretionRepetition . '}'  (9)
	VarDeclaretionRepetition : VarDeclaretionRepetition . VarDeclaretion  (13)

	PUBLIC  shift 16
	BOOLEAN  shift 17
	INT  shift 18
	IDENTIFIER  shift 19
	'}'  shift 45
	.  error

	MethodDeclarationRepetition  goto 46
	VarDeclaretion  goto 32
	MethodDeclaration  goto 24
	Type  goto 25


state 39
	ClassDeclaretion : CLASS IDENTIFIER EXTENDS IDENTIFIER '{' MethodDeclarationRepetition . '}'  (7)
	MethodDeclarationRepetition : MethodDeclarationRepetition . MethodDeclaration  (15)

	PUBLIC  shift 16
	'}'  shift 47
	.  error

	MethodDeclaration  goto 34


state 40
	MethodDeclaration : PUBLIC Type IDENTIFIER . '(' DeclarationTypesRepetition ')' '{' VarDeclaretionRepetition StatementRepetition RETURN Expression ';' '}'  (18)
	MethodDeclaration : PUBLIC Type IDENTIFIER . '(' DeclarationTypesRepetition ')' '{' VarDeclaretionRepetition RETURN Expression ';' '}'  (19)
	MethodDeclaration : PUBLIC Type IDENTIFIER . '(' ')' '{' VarDeclaretionRepetition StatementRepetition RETURN Expression ';' '}'  (20)
	MethodDeclaration : PUBLIC Type IDENTIFIER . '(' ')' '{' VarDeclaretionRepetition RETURN Expression ';' '}'  (21)
	MethodDeclaration : PUBLIC Type IDENTIFIER . '(' DeclarationTypesRepetition ')' '{' StatementRepetition RETURN Expression ';' '}'  (22)
	MethodDeclaration : PUBLIC Type IDENTIFIER . '(' DeclarationTypesRepetition ')' '{' RETURN Expression ';' '}'  (23)
	MethodDeclaration : PUBLIC Type IDENTIFIER . '(' ')' '{' StatementRepetition RETURN Expression ';' '}'  (24)
	MethodDeclaration : PUBLIC Type IDENTIFIER . '(' ')' '{' RETURN Expression ';' '}'  (25)

	'('  shift 48
	.  error


state 41
	Type : INT '[' ']' .  (30)

	.  reduce 30


state 42
	ClassDeclaretion : CLASS IDENTIFIER '{' VarDeclaretionRepetition MethodDeclarationRepetition '}' .  (6)

	.  reduce 6


state 43
	VarDeclaretion : Type IDENTIFIER ';' .  (17)

	.  reduce 17


state 44
	MainClass : CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' STRING . '[' ']' IDENTIFIER ')' '{' Statement '}' '}'  (3)

	'['  shift 49
	.  error


state 45
	ClassDeclaretion : CLASS IDENTIFIER EXTENDS IDENTIFIER '{' VarDeclaretionRepetition '}' .  (9)

	.  reduce 9


state 46
	ClassDeclaretion : CLASS IDENTIFIER EXTENDS IDENTIFIER '{' VarDeclaretionRepetition MethodDeclarationRepetition . '}'  (5)
	MethodDeclarationRepetition : MethodDeclarationRepetition . MethodDeclaration  (15)

	PUBLIC  shift 16
	'}'  shift 50
	.  error

	MethodDeclaration  goto 34


state 47
	ClassDeclaretion : CLASS IDENTIFIER EXTENDS IDENTIFIER '{' MethodDeclarationRepetition '}' .  (7)

	.  reduce 7


state 48
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' . DeclarationTypesRepetition ')' '{' VarDeclaretionRepetition StatementRepetition RETURN Expression ';' '}'  (18)
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' . DeclarationTypesRepetition ')' '{' VarDeclaretionRepetition RETURN Expression ';' '}'  (19)
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' . ')' '{' VarDeclaretionRepetition StatementRepetition RETURN Expression ';' '}'  (20)
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' . ')' '{' VarDeclaretionRepetition RETURN Expression ';' '}'  (21)
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' . DeclarationTypesRepetition ')' '{' StatementRepetition RETURN Expression ';' '}'  (22)
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' . DeclarationTypesRepetition ')' '{' RETURN Expression ';' '}'  (23)
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' . ')' '{' StatementRepetition RETURN Expression ';' '}'  (24)
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' . ')' '{' RETURN Expression ';' '}'  (25)

	BOOLEAN  shift 17
	INT  shift 18
	IDENTIFIER  shift 19
	')'  shift 51
	.  error

	Type  goto 52
	DeclarationTypesRepetition  goto 53


state 49
	MainClass : CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' STRING '[' . ']' IDENTIFIER ')' '{' Statement '}' '}'  (3)

	']'  shift 54
	.  error


state 50
	ClassDeclaretion : CLASS IDENTIFIER EXTENDS IDENTIFIER '{' VarDeclaretionRepetition MethodDeclarationRepetition '}' .  (5)

	.  reduce 5


state 51
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' ')' . '{' VarDeclaretionRepetition StatementRepetition RETURN Expression ';' '}'  (20)
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' ')' . '{' VarDeclaretionRepetition RETURN Expression ';' '}'  (21)
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' ')' . '{' StatementRepetition RETURN Expression ';' '}'  (24)
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' ')' . '{' RETURN Expression ';' '}'  (25)

	'{'  shift 55
	.  error


state 52
	DeclarationTypesRepetition : Type . IDENTIFIER ',' DeclarationTypesRepetition  (26)
	DeclarationTypesRepetition : Type . IDENTIFIER  (27)

	IDENTIFIER  shift 56
	.  error


state 53
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' DeclarationTypesRepetition . ')' '{' VarDeclaretionRepetition StatementRepetition RETURN Expression ';' '}'  (18)
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' DeclarationTypesRepetition . ')' '{' VarDeclaretionRepetition RETURN Expression ';' '}'  (19)
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' DeclarationTypesRepetition . ')' '{' StatementRepetition RETURN Expression ';' '}'  (22)
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' DeclarationTypesRepetition . ')' '{' RETURN Expression ';' '}'  (23)

	')'  shift 57
	.  error


state 54
	MainClass : CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' . IDENTIFIER ')' '{' Statement '}' '}'  (3)

	IDENTIFIER  shift 58
	.  error


state 55
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' ')' '{' . VarDeclaretionRepetition StatementRepetition RETURN Expression ';' '}'  (20)
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' ')' '{' . VarDeclaretionRepetition RETURN Expression ';' '}'  (21)
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' ')' '{' . StatementRepetition RETURN Expression ';' '}'  (24)
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' ')' '{' . RETURN Expression ';' '}'  (25)

	RETURN  shift 59
	BOOLEAN  shift 17
	INT  shift 18
	IF  shift 60
	WHILE  shift 61
	PRINT  shift 62
	IDENTIFIER  shift 63
	'{'  shift 64
	.  error

	Statement  goto 65
	VarDeclaretionRepetition  goto 66
	VarDeclaretion  goto 23
	Type  goto 25
	StatementRepetition  goto 67


state 56
	DeclarationTypesRepetition : Type IDENTIFIER . ',' DeclarationTypesRepetition  (26)
	DeclarationTypesRepetition : Type IDENTIFIER .  (27)

	','  shift 68
	')'  reduce 27


state 57
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' DeclarationTypesRepetition ')' . '{' VarDeclaretionRepetition StatementRepetition RETURN Expression ';' '}'  (18)
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' DeclarationTypesRepetition ')' . '{' VarDeclaretionRepetition RETURN Expression ';' '}'  (19)
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' DeclarationTypesRepetition ')' . '{' StatementRepetition RETURN Expression ';' '}'  (22)
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' DeclarationTypesRepetition ')' . '{' RETURN Expression ';' '}'  (23)

	'{'  shift 69
	.  error


state 58
	MainClass : CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' IDENTIFIER . ')' '{' Statement '}' '}'  (3)

	')'  shift 70
	.  error


state 59
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' ')' '{' RETURN . Expression ';' '}'  (25)

	IDENTIFIER  shift 71
	INTEGERLITERAL  shift 72
	TRUE  shift 73
	FALSE  shift 74
	NEW  shift 75
	THIS  shift 76
	'('  shift 77
	'!'  shift 78
	.  error

	Expression  goto 79


state 60
	Statement : IF . '(' Expression ')' Statement ELSE Statement  (36)

	'('  shift 80
	.  error


state 61
	Statement : WHILE . '(' Expression ')' Statement  (37)

	'('  shift 81
	.  error


state 62
	Statement : PRINT . '(' Expression ')' ';'  (38)

	'('  shift 82
	.  error


state 63
	Type : IDENTIFIER .  (33)
	Statement : IDENTIFIER . '=' Expression ';'  (39)
	Statement : IDENTIFIER . '[' Expression ']' '=' Expression ';'  (40)

	'='  shift 83
	'['  shift 84
	IDENTIFIER  reduce 33


state 64
	Statement : '{' . StatementRepetition '}'  (34)
	Statement : '{' . '}'  (35)

	IF  shift 60
	WHILE  shift 61
	PRINT  shift 62
	IDENTIFIER  shift 85
	'{'  shift 64
	'}'  shift 86
	.  error

	Statement  goto 65
	StatementRepetition  goto 87


state 65
	StatementRepetition : Statement .  (29)

	.  reduce 29


state 66
	VarDeclaretionRepetition : VarDeclaretionRepetition . VarDeclaretion  (13)
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' ')' '{' VarDeclaretionRepetition . StatementRepetition RETURN Expression ';' '}'  (20)
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' ')' '{' VarDeclaretionRepetition . RETURN Expression ';' '}'  (21)

	RETURN  shift 88
	BOOLEAN  shift 17
	INT  shift 18
	IF  shift 60
	WHILE  shift 61
	PRINT  shift 62
	IDENTIFIER  shift 63
	'{'  shift 64
	.  error

	Statement  goto 65
	VarDeclaretion  goto 32
	Type  goto 25
	StatementRepetition  goto 89


state 67
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' ')' '{' StatementRepetition . RETURN Expression ';' '}'  (24)
	StatementRepetition : StatementRepetition . Statement  (28)

	RETURN  shift 90
	IF  shift 60
	WHILE  shift 61
	PRINT  shift 62
	IDENTIFIER  shift 85
	'{'  shift 64
	.  error

	Statement  goto 91


state 68
	DeclarationTypesRepetition : Type IDENTIFIER ',' . DeclarationTypesRepetition  (26)

	BOOLEAN  shift 17
	INT  shift 18
	IDENTIFIER  shift 19
	.  error

	Type  goto 52
	DeclarationTypesRepetition  goto 92


state 69
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' DeclarationTypesRepetition ')' '{' . VarDeclaretionRepetition StatementRepetition RETURN Expression ';' '}'  (18)
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' DeclarationTypesRepetition ')' '{' . VarDeclaretionRepetition RETURN Expression ';' '}'  (19)
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' DeclarationTypesRepetition ')' '{' . StatementRepetition RETURN Expression ';' '}'  (22)
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' DeclarationTypesRepetition ')' '{' . RETURN Expression ';' '}'  (23)

	RETURN  shift 93
	BOOLEAN  shift 17
	INT  shift 18
	IF  shift 60
	WHILE  shift 61
	PRINT  shift 62
	IDENTIFIER  shift 63
	'{'  shift 64
	.  error

	Statement  goto 65
	VarDeclaretionRepetition  goto 94
	VarDeclaretion  goto 23
	Type  goto 25
	StatementRepetition  goto 95


state 70
	MainClass : CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' IDENTIFIER ')' . '{' Statement '}' '}'  (3)

	'{'  shift 96
	.  error


state 71
	Expression : IDENTIFIER .  (49)

	.  reduce 49


state 72
	Expression : INTEGERLITERAL .  (46)

	.  reduce 46


state 73
	Expression : TRUE .  (47)

	.  reduce 47


state 74
	Expression : FALSE .  (48)

	.  reduce 48


state 75
	Expression : NEW . INT '[' Expression ']'  (51)
	Expression : NEW . IDENTIFIER '(' ')'  (52)

	INT  shift 97
	IDENTIFIER  shift 98
	.  error


state 76
	Expression : THIS .  (50)

	.  reduce 50


state 77
	Expression : '(' . Expression ')'  (54)

	IDENTIFIER  shift 71
	INTEGERLITERAL  shift 72
	TRUE  shift 73
	FALSE  shift 74
	NEW  shift 75
	THIS  shift 76
	'('  shift 77
	'!'  shift 78
	.  error

	Expression  goto 99


state 78
	Expression : '!' . Expression  (53)

	IDENTIFIER  shift 71
	INTEGERLITERAL  shift 72
	TRUE  shift 73
	FALSE  shift 74
	NEW  shift 75
	THIS  shift 76
	'('  shift 77
	'!'  shift 78
	.  error

	Expression  goto 100


state 79
	MethodDeclaration : PUBLIC Type IDENTIFIER '(' ')' '{' RETURN Expression . ';' '}'  (25)
	Expression : Expression . Operator Expression  (41)
	Expression : Expression . '[' Expression ']'  (42)
	Expression : Expression . '.' LENGTH  (43)
	Expression : Expression . '.' IDENTIFIER '(' ')'  (44)
	Expression : Expression . '.' IDENTIFIER '(' ExpressionRepetition ')'  (45)

	'<'  shift 101
	"&&"  shift 102
	'-'  shift 103
	'+'  shift 104
	'*'  shift 105
	'['  shift 106
	';'  shift 107
	'.'  shift 108
	.  error

	Operator  goto 109


state 80
	Statement : IF '(' . Expression ')' Statement ELSE Statement  (36)

	IDENTIFIER  shift 71
	INTEGERLITERAL  shift 72
	TRUE  shift 73
	FALSE  shift 74
	NEW  shift 75
	THIS  shift 76
	'('  shift 77
	'!'  shift 78
	.  error

	Expression  goto 110


state 81
	Statement : WHILE '(' . Expression ')' Statement  (37)

	IDENTIFIER  shift 71
	INTEGERLITERAL  shift 72
	TRUE  shift 73
	FALSE  shift 74
	NEW  shift 75
	THIS  shift 76
	'('  shift 77
	'!'  shift 78
	.  error

	Expression  goto 111


state 82
	Statement : PRINT '(' . Expression ')' ';'  (38)

	IDENTIFIER  shift 71
	INTEGERLITERAL  shift 72
	TRUE  shift 73
	FALSE  shift 74
	NEW  shift 75
	THIS  shift 76
	'('  shift 77
	'!'  shift 78
	.  error

	Expression  goto 112


state 83
	Statement : IDENTIFIER '=' . Expression ';'  (39)

	IDENTIFIER  shift 71
	INTEGERLITERAL  shift 72
	TRUE  shift 73
	FALSE  shift 74
	NEW  shift 75
	THIS  shift 76
	'('  shift 77
	'!'  shift 78
	.  error

	Expression  goto 113


state 84
	Statement : IDENTIFIER '[' . Expression ']' '=' Expression ';'  (40)

	IDENTIFIER  shift 71
	INTEGERLITERAL  shift 72
	TRUE  shift 73
	FALSE  shift 74
	NEW  shift 75
	THIS  shift 76
	'('  shift 77
	'!'  shift 78
	.  error

	Expression  goto 114


state 85
	Statement : IDENTIFIER . '=' Expression ';'  (39)
	Statement : IDENTIFIER . '[' Expression ']' '=' Expression ';'  (40)

	'='  shift 83
	'['  shift 84
	.  error

